# megafractal

./: README.md
front/: hsl_to_rgb.js  index.html  main.js
load-balancer/: package.json  tsconfig.json
load-balancer/src/: index.ts
rust-executor/: Cargo.toml  Rocket.toml
rust-executor/src/: main.rs  mandelbrot.rs  request_processor.rs  zoomparams.rs
