[package]
name = "rust-executor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version= "0.3.2", features = ["compression-gzip"] }
serde = { version = "1.0.144", features = ["derive"] }